force-app/main/default/objects/DecisionApplication__c/fields/OwnerContractCollectStorage__c.field-meta.xml
<CustomField>
    <fullName>OwnerContractCollectStorage__c</fullName>
    <label>家主契約書回収保管</label>
    <length>255</length>
    <type>Text</type>
</CustomField>