force-app/main/default/objects/DecisionApplication__c/fields/PaymentAmountDetails__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmountDetails__c</fullName>
    <label>支払金額内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>