force-app/main/default/objects/DecisionApplication__c/fields/PaymentCategoryOtherDescription__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategoryOtherDescription__c</fullName>
    <label>支払区分その他記載</label>
    <length>255</length>
    <type>Text</type>
</CustomField>