force-app/main/default/objects/DecisionApplication__c/fields/PaymentDesignatedDay__c.field-meta.xml
<CustomField>
    <fullName>PaymentDesignatedDay__c</fullName>
    <label>支払指定日</label>
    <type>Date</type>
</CustomField>