force-app/main/default/objects/DecisionApplication__c/fields/PaymentDestination__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>決裁申請 (支払先)</relationshipLabel>
    <relationshipName>V4XO</relationshipName>
    <type>Lookup</type>
</CustomField>