force-app/main/default/objects/DecisionApplication__c/fields/PaymentDestinationBankAccount__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>DecisionRequestBankAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>