force-app/main/default/objects/DecisionApplication__c/fields/PaymentDestinationPhone__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationPhone__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>支払先TEL</label>
    <type>Text</type>
</CustomField>