force-app/main/default/objects/DecisionApplication__c/fields/PaymentDestinationPhoneForInput__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationPhoneForInput__c</fullName>
    <label>支払先TEL</label>
    <type>Phone</type>
</CustomField>