force-app/main/default/objects/DecisionApplication__c/fields/PaymentDoneAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentDoneAmount__c</fullName>
    <label>入金済額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>