force-app/main/default/objects/DecisionApplication__c/fields/PaymentStart__c.field-meta.xml
<CustomField>
    <fullName>PaymentStart__c</fullName>
    <label>支払開始</label>
    <type>Date</type>
</CustomField>