force-app/main/default/objects/DecisionApplication__c/fields/PaymentStartCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartCategory__c</fullName>
    <label>支払開始 区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>支払</fullName>
                <default>true</default>
                <label>支払</label>
            </value>
            <value>
                <fullName>支払開始</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>