force-app/main/default/objects/DecisionApplication__c/fields/PenaltyContent__c.field-meta.xml
<CustomField>
    <fullName>PenaltyContent__c</fullName>
    <label>違約金内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>