force-app/main/default/objects/DecisionApplication__c/fields/RealEstateAdress__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAdress__c</fullName>
    <label>物件住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>