force-app/main/default/objects/DecisionApplication__c/fields/RealEstateName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName__c</fullName>
    <label>物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>