force-app/main/default/objects/DecisionApplication__c/fields/ReCheckBillingAmountAgencyCharges__c.field-meta.xml
<CustomField>
    <fullName>ReCheckBillingAmountAgencyCharges__c</fullName>
    <label>再査請求額月数_仲介手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>