force-app/main/default/objects/DecisionApplication__c/fields/ReCheckBillingAmountManageCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>ReCheckBillingAmountManageCommonCharge__c</fullName>
    <label>再査請求額_当月管理共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>