force-app/main/default/objects/DecisionApplication__c/fields/ReCheckExecuter__c.field-meta.xml
<CustomField>
    <fullName>ReCheckExecuter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査実行者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionRequestUserRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>