force-app/main/default/objects/DecisionApplication__c/fields/ReCheckInputDailyRateDays__c.field-meta.xml
<CustomField>
    <fullName>ReCheckInputDailyRateDays__c</fullName>
    <label>再査入力_日割日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>