force-app/main/default/objects/DecisionApplication__c/fields/ReCheckInputDayNum__c.field-meta.xml
<CustomField>
    <fullName>ReCheckInputDayNum__c</fullName>
    <label>再査入力_月日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>