force-app/main/default/objects/DecisionApplication__c/fields/ReCheckReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReCheckReturnDate__c</fullName>
    <label>再査戻し日</label>
    <type>Date</type>
</CustomField>