force-app/main/default/objects/DecisionApplication__c/fields/RefundTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundTotalAmount__c</fullName>
    <formula>RentRefundAmount__c +  DepositRefundAmount__c</formula>
    <label>返金合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>