force-app/main/default/objects/DecisionApplication__c/fields/ReminderAfter45Days__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfter45Days__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>督促45日後日</label>
    <type>Text</type>
</CustomField>