force-app/main/default/objects/DecisionApplication__c/fields/ReminderAfter90Days__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfter90Days__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>督促90日後日</label>
    <type>Text</type>
</CustomField>