force-app/main/default/objects/DecisionApplication__c/fields/ReminderDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReminderDueDate__c</fullName>
    <label>督促期日</label>
    <type>Date</type>
</CustomField>