force-app/main/default/objects/DecisionApplication__c/fields/RenewalChargesTax__c.field-meta.xml
<CustomField>
    <fullName>RenewalChargesTax__c</fullName>
    <label>更新手数料消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>