force-app/main/default/objects/DecisionApplication__c/fields/RenewalProcessMethod__c.field-meta.xml
<CustomField>
    <fullName>RenewalProcessMethod__c</fullName>
    <label>更新手続方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>書類作成のみ</fullName>
            </value>
            <value>
                <fullName>更新費用発生</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>