force-app/main/default/objects/DecisionApplication__c/fields/RenovationBillingOriginalRecoveryCost__c.field-meta.xml
<CustomField>
    <fullName>RenovationBillingOriginalRecoveryCost__c</fullName>
    <label>リフォーム請求_原状回復費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>