force-app/main/default/objects/DecisionApplication__c/fields/RenovationBillingTax10__c.field-meta.xml
<CustomField>
    <fullName>RenovationBillingTax10__c</fullName>
    <label>リフォーム請求_消費税10%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>