force-app/main/default/objects/DecisionApplication__c/fields/RenovationBillingTax8__c.field-meta.xml
<CustomField>
    <fullName>RenovationBillingTax8__c</fullName>
    <label>リフォーム請求_消費税8%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>