force-app/main/default/objects/DecisionApplication__c/fields/RenterAdress__c.field-meta.xml
<CustomField>
    <fullName>RenterAdress__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>賃貸人住所</label>
    <type>Text</type>
</CustomField>