force-app/main/default/objects/DecisionApplication__c/fields/RenterFax__c.field-meta.xml
<CustomField>
    <fullName>RenterFax__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>賃貸人FAX</label>
    <type>Text</type>
</CustomField>