force-app/main/default/objects/DecisionApplication__c/fields/RenterName__c.field-meta.xml
<CustomField>
    <fullName>RenterName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>賃貸人名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DecisionRequestContactRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>