force-app/main/default/objects/DecisionApplication__c/fields/RenterPhone__c.field-meta.xml
<CustomField>
    <fullName>RenterPhone__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>賃貸人TEL</label>
    <type>Text</type>
</CustomField>