force-app/main/default/objects/DecisionApplication__c/fields/RentPaymentStartMonth__c.field-meta.xml
<CustomField>
    <fullName>RentPaymentStartMonth__c</fullName>
    <label>家賃支払開始月</label>
    <type>Date</type>
</CustomField>