force-app/main/default/objects/DecisionApplication__c/fields/RentRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>RentRefundAmount__c</fullName>
    <formula>CustodyRentSubtotal__c - BillingRentSubtotal__c</formula>
    <label>家賃返金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>