force-app/main/default/objects/DecisionApplication__c/fields/RentRemittanceBankName__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceBankName__c</fullName>
    <label>家賃送金_銀行名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>