force-app/main/default/objects/DecisionApplication__c/fields/RentRemittanceBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceBranchOfficeName__c</fullName>
    <label>家賃送金_支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>