force-app/main/default/objects/DecisionApplication__c/fields/RentTotal__c.field-meta.xml
<CustomField>
    <fullName>RentTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>月額計</label>
    <type>Text</type>
</CustomField>