force-app/main/default/objects/DecisionApplication__c/fields/RepairApplicationFormImprintColumn__c.field-meta.xml
<CustomField>
    <fullName>RepairApplicationFormImprintColumn__c</fullName>
    <label>修繕決裁申請書押印欄</label>
    <type>TextArea</type>
</CustomField>