force-app/main/default/objects/DecisionApplication__c/fields/ReplyPeriod__c.field-meta.xml
<CustomField>
    <fullName>ReplyPeriod__c</fullName>
    <label>返信期限</label>
    <type>Date</type>
</CustomField>