force-app/main/default/objects/DecisionApplication__c/fields/RequestActualDepositAmount__c.field-meta.xml
<CustomField>
    <fullName>RequestActualDepositAmount__c</fullName>
    <label>依頼書実入金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>