force-app/main/default/objects/DecisionApplication__c/fields/RequestOverPaymentProcess__c.field-meta.xml
<CustomField>
    <fullName>RequestOverPaymentProcess__c</fullName>
    <label>依頼書過入金処理</label>
    <length>255</length>
    <type>Text</type>
</CustomField>