force-app/main/default/objects/DecisionApplication__c/fields/RequestPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>RequestPaymentDate__c</fullName>
    <label>依頼書入金日</label>
    <type>Date</type>
</CustomField>