force-app/main/default/objects/DecisionApplication__c/fields/ReserveDate3__c.field-meta.xml
<CustomField>
    <fullName>ReserveDate3__c</fullName>
    <label>予備日3</label>
    <type>Date</type>
</CustomField>