force-app/main/default/objects/DecisionApplication__c/fields/ResidenceYear__c.field-meta.xml
<CustomField>
    <fullName>ResidenceYear__c</fullName>
    <label>居住年数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>