force-app/main/default/objects/DecisionApplication__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入居者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DecisionRequestContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>