force-app/main/default/objects/DecisionApplication__c/fields/ResponsibleSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleSubmitDate__c</fullName>
    <label>責任者提出日</label>
    <type>Date</type>
</CustomField>