force-app/main/default/objects/DecisionApplication__c/fields/ReturnNotArrivedFirstReminderPerson__c.field-meta.xml
<CustomField>
    <fullName>ReturnNotArrivedFirstReminderPerson__c</fullName>
    <label>返送未着初回督促者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>