force-app/main/default/objects/DecisionApplication__c/fields/RewardDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>RewardDiscountAmount__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>礼金割引金額</label>
    <type>Text</type>
</CustomField>