force-app/main/default/objects/DecisionApplication__c/fields/RewardDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>RewardDiscountRate__c</fullName>
    <label>礼金割引率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>