force-app/main/default/objects/DecisionApplication__c/fields/SealDocument__c.field-meta.xml
<CustomField>
    <fullName>SealDocument__c</fullName>
    <label>捺印書類</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>