force-app/main/default/objects/DecisionApplication__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <label>送付日</label>
    <type>Date</type>
</CustomField>