force-app/main/default/objects/DecisionApplication__c/fields/StorageArrivalScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>StorageArrivalScheduledDate__c</fullName>
    <label>保管到着予定日</label>
    <type>Date</type>
</CustomField>