force-app/main/default/objects/DecisionApplication__c/fields/StorageNotArrivedCompanyReporter__c.field-meta.xml
<CustomField>
    <fullName>StorageNotArrivedCompanyReporter__c</fullName>
    <label>保管未着企業報告者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>