force-app/main/default/objects/DecisionApplication__c/fields/StorageNotArrivedReminderDate__c.field-meta.xml
<CustomField>
    <fullName>StorageNotArrivedReminderDate__c</fullName>
    <label>保管未着督促日</label>
    <type>Date</type>
</CustomField>