force-app/main/default/objects/DecisionApplication__c/fields/StorageNotArrivedReminderPerson__c.field-meta.xml
<CustomField>
    <fullName>StorageNotArrivedReminderPerson__c</fullName>
    <label>保管未着督促者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>