force-app/main/default/objects/DecisionApplication__c/fields/StructureOther__c.field-meta.xml
<CustomField>
    <fullName>StructureOther__c</fullName>
    <label>構造(その他記載)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>