force-app/main/default/objects/DecisionApplication__c/fields/SubtotalA__c.field-meta.xml
<CustomField>
    <fullName>SubtotalA__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>小計A</label>
    <type>Text</type>
</CustomField>