force-app/main/default/objects/DecisionApplication__c/fields/SubtotalC__c.field-meta.xml
<CustomField>
    <fullName>SubtotalC__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>小計Ｃ</label>
    <type>Text</type>
</CustomField>