force-app/main/default/objects/DecisionApplication__c/fields/TempAdvancePayment__c.field-meta.xml
<CustomField>
    <fullName>TempAdvancePayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約金・家賃等一時立替支払</label>
    <type>Checkbox</type>
</CustomField>