force-app/main/default/objects/DecisionApplication__c/fields/TermsChange__c.field-meta.xml
<CustomField>
    <fullName>TermsChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipName>DecisionRequestConditionChangeRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>