force-app/main/default/objects/DecisionApplication__c/fields/TotalAmoutByResidentChange__c.field-meta.xml
<CustomField>
    <fullName>TotalAmoutByResidentChange__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>入居者変更に伴う費用合計</label>
    <type>Text</type>
</CustomField>