force-app/main/default/objects/DecisionApplication__c/fields/TransferCharges__c.field-meta.xml
<CustomField>
    <fullName>TransferCharges__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>振込手数料</label>
    <type>Text</type>
</CustomField>