force-app/main/default/objects/DecisionApplication__c/fields/WorkArrangeRentId__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeRentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作業手配書家賃ID</label>
    <referenceTo>Rent__c</referenceTo>
    <relationshipName>DecisionRequestRentRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>