force-app/main/default/objects/DecisionApplication__c/recordTypes/CancelCalculateDecisionApplication.recordType-meta.xml
<RecordType>
    <fullName>CancelCalculateDecisionApplication</fullName>
    <active>true</active>
    <label>解約精算決裁申請</label>
</RecordType>