force-app/main/default/objects/DecisionApplication__c/recordTypes/LegalApplication.recordType-meta.xml
<RecordType>
    <fullName>LegalApplication</fullName>
    <active>true</active>
    <label>リーガル申請</label>
</RecordType>