force-app/main/default/objects/DecisionApplication__c/recordTypes/NewContractDecisionApplication.recordType-meta.xml
<RecordType>
    <fullName>NewContractDecisionApplication</fullName>
    <active>true</active>
    <label>新規契約決裁申請</label>
</RecordType>