force-app/main/default/objects/DecisionApplication__c/recordTypes/RenewalContractDecisionApplication.recordType-meta.xml
<RecordType>
    <fullName>RenewalContractDecisionApplication</fullName>
    <active>true</active>
    <label>更新契約決裁申請</label>
</RecordType>