force-app/main/default/objects/DecisionApplication__c/recordTypes/ResidentChangeCostDecisionApplication.recordType-meta.xml
<RecordType>
    <fullName>ResidentChangeCostDecisionApplication</fullName>
    <active>true</active>
    <label>入居者変更費用決裁申請</label>
</RecordType>