force-app/main/default/objects/DecisionApplication__c/recordTypes/TermsChangeDecisionApplication.recordType-meta.xml
<RecordType>
    <fullName>TermsChangeDecisionApplication</fullName>
    <active>true</active>
    <label>賃貸借条件変更決裁申請</label>
</RecordType>