force-app/main/default/objects/DecisionApplication__c/recordTypes/WorkArrangementRequest.recordType-meta.xml
<RecordType>
    <fullName>WorkArrangementRequest</fullName>
    <active>true</active>
    <label>作業手配依頼申請</label>
</RecordType>