force-app/main/default/objects/DecisionApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>DecisionAcquisitionDate__c</columns>
    <columns>DecisionApplicationDate__c</columns>
    <columns>PaymentStart__c</columns>
    <columns>PaymentDesignatedDay__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>