force-app/main/default/objects/DecisionApplication__c/listViews/ApprovalDecisionApplication.listView-meta.xml
<ListView>
    <fullName>ApprovalDecisionApplication</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>del_DecisionRequestDate__c</columns>
    <columns>RealEstateId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>承認</value>
    </filters>
    <filters>
        <field>ListViewManagerr__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>承認済みの決裁申請/作業手配依頼</label>
</ListView>