force-app/main/default/objects/DecisionApplication__c/listViews/NotApprovalDecisionApplication.listView-meta.xml
<ListView>
    <fullName>NotApprovalDecisionApplication</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>DecisionApplicationDate__c</columns>
    <columns>RealEstateId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewManagerr__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>承認待ち</value>
    </filters>
    <label>未承認の決裁申請/作業手配依頼</label>
</ListView>