force-app/main/default/objects/DecisionApplication__c/listViews/WorkArrangementOutputList.listView-meta.xml
<ListView>
    <fullName>WorkArrangementOutputList</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DecisionApplication__c.WorkArrangementRequest</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>承認</value>
    </filters>
    <label>作業手配依頼書出力対象</label>
</ListView>